Fix mobile overlap issue and added line-clamp compatibility

--- a/contact/contactus.css
+++ b/contact/contactus.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7fafc;
+    background-color: wheat;
     color: #1a202c;
   }
   
